<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2019-2024 Forb Yuan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>win.doyto</groupId>
        <artifactId>doyto-oss-parent</artifactId>
        <version>5</version>
    </parent>

    <artifactId>doyto-query-mongodb-repo</artifactId>
    <name>DoytoQueryMongoDBRepository</name>
    <packaging>pom</packaging>
    <version>2.0.1-SNAPSHOT</version>
    <url>https://query.doyto.win/</url>

    <properties>
        <spring-boot.version>3.3.1</spring-boot.version>
        <embedded-mongo.version>4.16.2</embedded-mongo.version>
        <doyto-query.version>2.0.1-SNAPSHOT</doyto-query.version>

        <java.version>17</java.version>
        <sourceDirectory>src/main/java</sourceDirectory>
        <maven.deploy.skip>true</maven.deploy.skip>

        <sonar.exclusions>**/pom.xml</sonar.exclusions>
        <jacoco.destFile>${user.dir}/target/jacoco.exec</jacoco.destFile>
        <jacoco.dataFile>${user.dir}/target/jacoco.exec</jacoco.dataFile>
    </properties>

    <modules>
        <module>doyto-query-mongodb</module>
        <module>doyto-query-mongodb-spring-tx</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.flapdoodle.embed</groupId>
            <artifactId>de.flapdoodle.embed.mongo</artifactId>
            <version>${embedded-mongo.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>${sourceDirectory}</sourceDirectory>
        <testResources>
            <testResource>
                <directory>./src/test/java</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.json</include>
                </includes>
            </testResource>
            <testResource>
                <directory>./src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.yml</include>
                    <include>**/*.sql</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.properties</include>
                </includes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.20.0</version>
                <configuration>
                    <sourceDirectory>src/main/java</sourceDirectory>
                    <outputDirectory>target/delombok</outputDirectory>
                    <addOutputDirectory>false</addOutputDirectory>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok</artifactId>
                        <version>1.18.32</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!-- 更新pom版本号-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>ossrh</flattenMode>
                    <flattenedPomFilename>target/${project.artifactId}.pom.xml</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <scm>
        <tag>main</tag>
        <url>https://github.com/doytowin/doyto-query-mongodb</url>
        <connection>scm:git:https://github.com/doytowin/doyto-query-mongodb.git</connection>
        <developerConnection>scm:git:https://github.com/doytowin/doyto-query-mongodb.git</developerConnection>
    </scm>
</project>